fix: UI bugs on login page fix: h1 font size on mobile is too big

--- a/resources/css/_reset.scss
+++ b/resources/css/_reset.scss
@@ -76,6 +76,12 @@ h1 {
     font-size: 2.5rem;
 }
 
+@media screen and (max-width: 1200px) {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
 .link-without-animation {
     &::before {
         content: none;
