--- a/resources/css/_themes.scss
+++ b/resources/css/_themes.scss
@@ -11,6 +11,8 @@
     --primary-title-color: #363636;
     --contrast-text-color: #fff;
 
+    --dark-color: #000;
+
     --borders-color: #e4e4e4;
     --borders-color-rgb: 228, 228, 228;
     --icons-color: #c4c4c4;
